// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`résumé and contact responsive stories > keeps the complete content at the desktop viewport 1`] = `
<div
  data-preview-viewport="desktop"
>
  <section
    class="ds-section _module_cb7a8e"
    data-resume-variant="full"
    style="--section-space: var(--space-section);"
  >
    <div
      class="ds-container"
      style="--container-max: var(--content-wide);"
    >
      <div
        class="ds-stack"
        style="--stack-gap: var(--space-2xl);"
      >
        <header
          class="_moduleHeader_cb7a8e"
        >
          <h1
            class="_moduleTitle_cb7a8e"
          >
            个人简历
          </h1>
          <p
            class="_moduleDescription_cb7a8e"
          >
            个人简介、教育经历与获奖经历。
          </p>
        </header>
        <section
          class="_profile_cb7a8e"
          data-density="full"
        >
          <div
            class="_avatarFrame_cb7a8e"
          >
            <div
              aria-label="测试图片 fixture-avatar"
              class="_avatarPlaceholder_cb7a8e"
              data-avatar-asset-id="fixture-avatar"
              role="img"
            >
              <span
                aria-hidden="true"
              >
                测
              </span>
            </div>
          </div>
          <div
            class="ds-stack _profileCopy_cb7a8e"
            style="--stack-gap: var(--space-sm);"
          >
            <h2
              class="_profileTitle_cb7a8e"
            >
              测试作品集
            </h2>
            <p
              class="_profileMeta_cb7a8e"
            >
              Fixture University
               · 
              测试摄影师
            </p>
            <p
              class="_profileBio_cb7a8e"
            >
              仅用于自动化测试的简介。
            </p>
          </div>
        </section>
        <section
          aria-labelledby="_r_4_"
          class="_resumeSection_cb7a8e"
          data-density="full"
        >
          <h2
            class="_sectionTitle_cb7a8e"
            id="_r_4_"
          >
            教育经历
          </h2>
          <ol
            class="_timeline_cb7a8e"
          >
            <li
              class="_timelineEntry_cb7a8e"
            >
              <div
                class="_entryHeader_cb7a8e"
              >
                <h3
                  class="_entryTitle_cb7a8e"
                >
                  示例大学
                </h3>
                <span
                  class="_entryDate_cb7a8e"
                >
                  2018–2022
                </span>
              </div>
              <p
                class="_entryDescription_cb7a8e"
              >
                测试教育经历一
              </p>
            </li>
            <li
              class="_timelineEntry_cb7a8e"
            >
              <div
                class="_entryHeader_cb7a8e"
              >
                <h3
                  class="_entryTitle_cb7a8e"
                >
                  示例研究院
                </h3>
                <span
                  class="_entryDate_cb7a8e"
                >
                  2022–2024
                </span>
              </div>
              <p
                class="_entryDescription_cb7a8e"
              >
                测试教育经历二
              </p>
            </li>
          </ol>
        </section>
        <section
          aria-labelledby="_r_5_"
          class="_resumeSection_cb7a8e"
          data-density="full"
        >
          <h2
            class="_sectionTitle_cb7a8e"
            id="_r_5_"
          >
            获奖经历
          </h2>
          <ul
            class="_awardList_cb7a8e"
          >
            <li
              class="_awardEntry_cb7a8e"
            >
              <div
                class="_entryHeader_cb7a8e"
              >
                <h3
                  class="_entryTitle_cb7a8e"
                >
                  测试奖项一
                </h3>
                <span
                  class="_entryDate_cb7a8e"
                >
                  2023
                </span>
              </div>
            </li>
            <li
              class="_awardEntry_cb7a8e"
            >
              <div
                class="_entryHeader_cb7a8e"
              >
                <h3
                  class="_entryTitle_cb7a8e"
                >
                  测试奖项二
                </h3>
                <span
                  class="_entryDate_cb7a8e"
                >
                  2024-06
                </span>
              </div>
              <p
                class="_entryDescription_cb7a8e"
              >
                测试补充说明
              </p>
            </li>
          </ul>
        </section>
        <div
          class="_download_cb7a8e"
        >
          <a
            class="ds-button ds-button--primary ds-button--lg"
            download="wind-flower-poetry-wine-tea-resume.pdf"
            href="https://cdn.sanity.io/files/test-project/test-dataset/fixture-resume.pdf?dl=wind-flower-poetry-wine-tea-resume.pdf"
          >
            <span>
              点击下载
            </span>
          </a>
        </div>
      </div>
    </div>
  </section>
  <section
    class="ds-section _contact_bd68ac"
    data-testid="contact-section"
    id="contact"
    style="--section-space: var(--space-section);"
  >
    <div
      class="ds-container"
      style="--container-max: var(--content-narrow);"
    >
      <div
        class="_content_bd68ac"
      >
        <header
          class="_intro_bd68ac"
        >
          <p
            class="_eyebrow_bd68ac"
          >
            取得联系
          </p>
          <h2
            class="_title_bd68ac"
            data-heading-level="h2"
          >
            从一个清晰的想法开始
          </h2>
          <p
            class="_description_bd68ac"
          >
            无论是想交流影像、研究，还是有一个仍在构思中的合作方向，都欢迎写信。
          </p>
        </header>
        <div
          class="_primary_bd68ac"
        >
          <div
            class="_identity_bd68ac"
          >
            <div
              class="_avatarFrame_bd68ac"
            >
              <picture>
                <source
                  sizes="4rem"
                  srcset="/content-image-placeholder.svg?fit=max&w=160 160w, /content-image-placeholder.svg?fit=max&w=320 320w, /content-image-placeholder.svg?fit=max&w=640 640w"
                />
                <img
                  alt="测试图片 fixture-avatar"
                  class="ds-app-image _avatar_bd68ac"
                  data-nimg="1"
                  decoding="async"
                  height="800"
                  loading="eager"
                  src="/content-image-placeholder.svg?fit=max&w=640"
                  style="color: transparent;"
                  width="800"
                />
              </picture>
            </div>
            <div>
              <p
                class="_nickname_bd68ac"
              >
                测试作品集
              </p>
              <p
                class="_meta_bd68ac"
              >
                <span>
                  Fixture University
                </span>
                <span
                  aria-hidden="true"
                  class="_metaSeparator_bd68ac"
                >
                  ·
                </span>
                <span>
                  测试摄影师
                </span>
              </p>
            </div>
          </div>
          <a
            aria-label="电子邮箱：Northstar_lzh@zju.edu.cn"
            class="_email_bd68ac"
            href="mailto:Northstar_lzh@zju.edu.cn"
          >
            <span
              class="_emailAction_bd68ac"
            >
              写一封邮件
            </span>
            <span
              class="_emailAddress_bd68ac"
            >
              Northstar_lzh@zju.edu.cn
            </span>
          </a>
        </div>
        <section
          aria-labelledby="contact-guide-title"
          class="_guide_bd68ac"
        >
          <div
            class="_guideHeader_bd68ac"
          >
            <h2
              id="contact-guide-title"
            >
              不知道从哪里写起？
            </h2>
            <p>
              下面四点任选几项即可，我能更快理解你的想法。
            </p>
          </div>
          <ol
            class="_guideList_bd68ac"
          >
            <li
              class="_guideItem_bd68ac"
            >
              <span
                aria-hidden="true"
                class="_guideNumber_bd68ac"
              >
                01
              </span>
              <div>
                <h3>
                  你想聊什么？
                </h3>
                <p>
                  一句话说明是影像、研究、项目，还是其他想法。
                </p>
              </div>
            </li>
            <li
              class="_guideItem_bd68ac"
            >
              <span
                aria-hidden="true"
                class="_guideNumber_bd68ac"
              >
                02
              </span>
              <div>
                <h3>
                  你是谁？
                </h3>
                <p>
                  留下你的称呼，以及个人、团队或机构背景。
                </p>
              </div>
            </li>
            <li
              class="_guideItem_bd68ac"
            >
              <span
                aria-hidden="true"
                class="_guideNumber_bd68ac"
              >
                03
              </span>
              <div>
                <h3>
                  你期待什么？
                </h3>
                <p>
                  交流、合作、委托，或只是一个简单的提问。
                </p>
              </div>
            </li>
            <li
              class="_guideItem_bd68ac"
            >
              <span
                aria-hidden="true"
                class="_guideNumber_bd68ac"
              >
                04
              </span>
              <div>
                <h3>
                  有哪些关键信息？
                </h3>
                <p>
                  可附上时间、地点、参考链接或相关材料。
                </p>
              </div>
            </li>
          </ol>
          <p
            class="_guideNote_bd68ac"
          >
            不需要准备完整提案；一个清楚的开场也足够。
          </p>
        </section>
      </div>
    </div>
  </section>
</div>
`;

exports[`résumé and contact responsive stories > keeps the complete content at the mobile viewport 1`] = `
<div
  data-preview-viewport="mobile"
>
  <section
    class="ds-section _module_cb7a8e"
    data-resume-variant="full"
    style="--section-space: var(--space-section);"
  >
    <div
      class="ds-container"
      style="--container-max: var(--content-wide);"
    >
      <div
        class="ds-stack"
        style="--stack-gap: var(--space-2xl);"
      >
        <header
          class="_moduleHeader_cb7a8e"
        >
          <h1
            class="_moduleTitle_cb7a8e"
          >
            个人简历
          </h1>
          <p
            class="_moduleDescription_cb7a8e"
          >
            个人简介、教育经历与获奖经历。
          </p>
        </header>
        <section
          class="_profile_cb7a8e"
          data-density="full"
        >
          <div
            class="_avatarFrame_cb7a8e"
          >
            <div
              aria-label="测试图片 fixture-avatar"
              class="_avatarPlaceholder_cb7a8e"
              data-avatar-asset-id="fixture-avatar"
              role="img"
            >
              <span
                aria-hidden="true"
              >
                测
              </span>
            </div>
          </div>
          <div
            class="ds-stack _profileCopy_cb7a8e"
            style="--stack-gap: var(--space-sm);"
          >
            <h2
              class="_profileTitle_cb7a8e"
            >
              测试作品集
            </h2>
            <p
              class="_profileMeta_cb7a8e"
            >
              Fixture University
               · 
              测试摄影师
            </p>
            <p
              class="_profileBio_cb7a8e"
            >
              仅用于自动化测试的简介。
            </p>
          </div>
        </section>
        <section
          aria-labelledby="_r_0_"
          class="_resumeSection_cb7a8e"
          data-density="full"
        >
          <h2
            class="_sectionTitle_cb7a8e"
            id="_r_0_"
          >
            教育经历
          </h2>
          <ol
            class="_timeline_cb7a8e"
          >
            <li
              class="_timelineEntry_cb7a8e"
            >
              <div
                class="_entryHeader_cb7a8e"
              >
                <h3
                  class="_entryTitle_cb7a8e"
                >
                  示例大学
                </h3>
                <span
                  class="_entryDate_cb7a8e"
                >
                  2018–2022
                </span>
              </div>
              <p
                class="_entryDescription_cb7a8e"
              >
                测试教育经历一
              </p>
            </li>
            <li
              class="_timelineEntry_cb7a8e"
            >
              <div
                class="_entryHeader_cb7a8e"
              >
                <h3
                  class="_entryTitle_cb7a8e"
                >
                  示例研究院
                </h3>
                <span
                  class="_entryDate_cb7a8e"
                >
                  2022–2024
                </span>
              </div>
              <p
                class="_entryDescription_cb7a8e"
              >
                测试教育经历二
              </p>
            </li>
          </ol>
        </section>
        <section
          aria-labelledby="_r_1_"
          class="_resumeSection_cb7a8e"
          data-density="full"
        >
          <h2
            class="_sectionTitle_cb7a8e"
            id="_r_1_"
          >
            获奖经历
          </h2>
          <ul
            class="_awardList_cb7a8e"
          >
            <li
              class="_awardEntry_cb7a8e"
            >
              <div
                class="_entryHeader_cb7a8e"
              >
                <h3
                  class="_entryTitle_cb7a8e"
                >
                  测试奖项一
                </h3>
                <span
                  class="_entryDate_cb7a8e"
                >
                  2023
                </span>
              </div>
            </li>
            <li
              class="_awardEntry_cb7a8e"
            >
              <div
                class="_entryHeader_cb7a8e"
              >
                <h3
                  class="_entryTitle_cb7a8e"
                >
                  测试奖项二
                </h3>
                <span
                  class="_entryDate_cb7a8e"
                >
                  2024-06
                </span>
              </div>
              <p
                class="_entryDescription_cb7a8e"
              >
                测试补充说明
              </p>
            </li>
          </ul>
        </section>
        <div
          class="_download_cb7a8e"
        >
          <a
            class="ds-button ds-button--primary ds-button--lg"
            download="wind-flower-poetry-wine-tea-resume.pdf"
            href="https://cdn.sanity.io/files/test-project/test-dataset/fixture-resume.pdf?dl=wind-flower-poetry-wine-tea-resume.pdf"
          >
            <span>
              点击下载
            </span>
          </a>
        </div>
      </div>
    </div>
  </section>
  <section
    class="ds-section _contact_bd68ac"
    data-testid="contact-section"
    id="contact"
    style="--section-space: var(--space-section);"
  >
    <div
      class="ds-container"
      style="--container-max: var(--content-narrow);"
    >
      <div
        class="_content_bd68ac"
      >
        <header
          class="_intro_bd68ac"
        >
          <p
            class="_eyebrow_bd68ac"
          >
            取得联系
          </p>
          <h2
            class="_title_bd68ac"
            data-heading-level="h2"
          >
            从一个清晰的想法开始
          </h2>
          <p
            class="_description_bd68ac"
          >
            无论是想交流影像、研究，还是有一个仍在构思中的合作方向，都欢迎写信。
          </p>
        </header>
        <div
          class="_primary_bd68ac"
        >
          <div
            class="_identity_bd68ac"
          >
            <div
              class="_avatarFrame_bd68ac"
            >
              <picture>
                <source
                  sizes="4rem"
                  srcset="/content-image-placeholder.svg?fit=max&w=160 160w, /content-image-placeholder.svg?fit=max&w=320 320w, /content-image-placeholder.svg?fit=max&w=640 640w"
                />
                <img
                  alt="测试图片 fixture-avatar"
                  class="ds-app-image _avatar_bd68ac"
                  data-nimg="1"
                  decoding="async"
                  height="800"
                  loading="eager"
                  src="/content-image-placeholder.svg?fit=max&w=640"
                  style="color: transparent;"
                  width="800"
                />
              </picture>
            </div>
            <div>
              <p
                class="_nickname_bd68ac"
              >
                测试作品集
              </p>
              <p
                class="_meta_bd68ac"
              >
                <span>
                  Fixture University
                </span>
                <span
                  aria-hidden="true"
                  class="_metaSeparator_bd68ac"
                >
                  ·
                </span>
                <span>
                  测试摄影师
                </span>
              </p>
            </div>
          </div>
          <a
            aria-label="电子邮箱：Northstar_lzh@zju.edu.cn"
            class="_email_bd68ac"
            href="mailto:Northstar_lzh@zju.edu.cn"
          >
            <span
              class="_emailAction_bd68ac"
            >
              写一封邮件
            </span>
            <span
              class="_emailAddress_bd68ac"
            >
              Northstar_lzh@zju.edu.cn
            </span>
          </a>
        </div>
        <section
          aria-labelledby="contact-guide-title"
          class="_guide_bd68ac"
        >
          <div
            class="_guideHeader_bd68ac"
          >
            <h2
              id="contact-guide-title"
            >
              不知道从哪里写起？
            </h2>
            <p>
              下面四点任选几项即可，我能更快理解你的想法。
            </p>
          </div>
          <ol
            class="_guideList_bd68ac"
          >
            <li
              class="_guideItem_bd68ac"
            >
              <span
                aria-hidden="true"
                class="_guideNumber_bd68ac"
              >
                01
              </span>
              <div>
                <h3>
                  你想聊什么？
                </h3>
                <p>
                  一句话说明是影像、研究、项目，还是其他想法。
                </p>
              </div>
            </li>
            <li
              class="_guideItem_bd68ac"
            >
              <span
                aria-hidden="true"
                class="_guideNumber_bd68ac"
              >
                02
              </span>
              <div>
                <h3>
                  你是谁？
                </h3>
                <p>
                  留下你的称呼，以及个人、团队或机构背景。
                </p>
              </div>
            </li>
            <li
              class="_guideItem_bd68ac"
            >
              <span
                aria-hidden="true"
                class="_guideNumber_bd68ac"
              >
                03
              </span>
              <div>
                <h3>
                  你期待什么？
                </h3>
                <p>
                  交流、合作、委托，或只是一个简单的提问。
                </p>
              </div>
            </li>
            <li
              class="_guideItem_bd68ac"
            >
              <span
                aria-hidden="true"
                class="_guideNumber_bd68ac"
              >
                04
              </span>
              <div>
                <h3>
                  有哪些关键信息？
                </h3>
                <p>
                  可附上时间、地点、参考链接或相关材料。
                </p>
              </div>
            </li>
          </ol>
          <p
            class="_guideNote_bd68ac"
          >
            不需要准备完整提案；一个清楚的开场也足够。
          </p>
        </section>
      </div>
    </div>
  </section>
</div>
`;

exports[`résumé and contact responsive stories > keeps the complete content at the tablet viewport 1`] = `
<div
  data-preview-viewport="tablet"
>
  <section
    class="ds-section _module_cb7a8e"
    data-resume-variant="full"
    style="--section-space: var(--space-section);"
  >
    <div
      class="ds-container"
      style="--container-max: var(--content-wide);"
    >
      <div
        class="ds-stack"
        style="--stack-gap: var(--space-2xl);"
      >
        <header
          class="_moduleHeader_cb7a8e"
        >
          <h1
            class="_moduleTitle_cb7a8e"
          >
            个人简历
          </h1>
          <p
            class="_moduleDescription_cb7a8e"
          >
            个人简介、教育经历与获奖经历。
          </p>
        </header>
        <section
          class="_profile_cb7a8e"
          data-density="full"
        >
          <div
            class="_avatarFrame_cb7a8e"
          >
            <div
              aria-label="测试图片 fixture-avatar"
              class="_avatarPlaceholder_cb7a8e"
              data-avatar-asset-id="fixture-avatar"
              role="img"
            >
              <span
                aria-hidden="true"
              >
                测
              </span>
            </div>
          </div>
          <div
            class="ds-stack _profileCopy_cb7a8e"
            style="--stack-gap: var(--space-sm);"
          >
            <h2
              class="_profileTitle_cb7a8e"
            >
              测试作品集
            </h2>
            <p
              class="_profileMeta_cb7a8e"
            >
              Fixture University
               · 
              测试摄影师
            </p>
            <p
              class="_profileBio_cb7a8e"
            >
              仅用于自动化测试的简介。
            </p>
          </div>
        </section>
        <section
          aria-labelledby="_r_2_"
          class="_resumeSection_cb7a8e"
          data-density="full"
        >
          <h2
            class="_sectionTitle_cb7a8e"
            id="_r_2_"
          >
            教育经历
          </h2>
          <ol
            class="_timeline_cb7a8e"
          >
            <li
              class="_timelineEntry_cb7a8e"
            >
              <div
                class="_entryHeader_cb7a8e"
              >
                <h3
                  class="_entryTitle_cb7a8e"
                >
                  示例大学
                </h3>
                <span
                  class="_entryDate_cb7a8e"
                >
                  2018–2022
                </span>
              </div>
              <p
                class="_entryDescription_cb7a8e"
              >
                测试教育经历一
              </p>
            </li>
            <li
              class="_timelineEntry_cb7a8e"
            >
              <div
                class="_entryHeader_cb7a8e"
              >
                <h3
                  class="_entryTitle_cb7a8e"
                >
                  示例研究院
                </h3>
                <span
                  class="_entryDate_cb7a8e"
                >
                  2022–2024
                </span>
              </div>
              <p
                class="_entryDescription_cb7a8e"
              >
                测试教育经历二
              </p>
            </li>
          </ol>
        </section>
        <section
          aria-labelledby="_r_3_"
          class="_resumeSection_cb7a8e"
          data-density="full"
        >
          <h2
            class="_sectionTitle_cb7a8e"
            id="_r_3_"
          >
            获奖经历
          </h2>
          <ul
            class="_awardList_cb7a8e"
          >
            <li
              class="_awardEntry_cb7a8e"
            >
              <div
                class="_entryHeader_cb7a8e"
              >
                <h3
                  class="_entryTitle_cb7a8e"
                >
                  测试奖项一
                </h3>
                <span
                  class="_entryDate_cb7a8e"
                >
                  2023
                </span>
              </div>
            </li>
            <li
              class="_awardEntry_cb7a8e"
            >
              <div
                class="_entryHeader_cb7a8e"
              >
                <h3
                  class="_entryTitle_cb7a8e"
                >
                  测试奖项二
                </h3>
                <span
                  class="_entryDate_cb7a8e"
                >
                  2024-06
                </span>
              </div>
              <p
                class="_entryDescription_cb7a8e"
              >
                测试补充说明
              </p>
            </li>
          </ul>
        </section>
        <div
          class="_download_cb7a8e"
        >
          <a
            class="ds-button ds-button--primary ds-button--lg"
            download="wind-flower-poetry-wine-tea-resume.pdf"
            href="https://cdn.sanity.io/files/test-project/test-dataset/fixture-resume.pdf?dl=wind-flower-poetry-wine-tea-resume.pdf"
          >
            <span>
              点击下载
            </span>
          </a>
        </div>
      </div>
    </div>
  </section>
  <section
    class="ds-section _contact_bd68ac"
    data-testid="contact-section"
    id="contact"
    style="--section-space: var(--space-section);"
  >
    <div
      class="ds-container"
      style="--container-max: var(--content-narrow);"
    >
      <div
        class="_content_bd68ac"
      >
        <header
          class="_intro_bd68ac"
        >
          <p
            class="_eyebrow_bd68ac"
          >
            取得联系
          </p>
          <h2
            class="_title_bd68ac"
            data-heading-level="h2"
          >
            从一个清晰的想法开始
          </h2>
          <p
            class="_description_bd68ac"
          >
            无论是想交流影像、研究，还是有一个仍在构思中的合作方向，都欢迎写信。
          </p>
        </header>
        <div
          class="_primary_bd68ac"
        >
          <div
            class="_identity_bd68ac"
          >
            <div
              class="_avatarFrame_bd68ac"
            >
              <picture>
                <source
                  sizes="4rem"
                  srcset="/content-image-placeholder.svg?fit=max&w=160 160w, /content-image-placeholder.svg?fit=max&w=320 320w, /content-image-placeholder.svg?fit=max&w=640 640w"
                />
                <img
                  alt="测试图片 fixture-avatar"
                  class="ds-app-image _avatar_bd68ac"
                  data-nimg="1"
                  decoding="async"
                  height="800"
                  loading="eager"
                  src="/content-image-placeholder.svg?fit=max&w=640"
                  style="color: transparent;"
                  width="800"
                />
              </picture>
            </div>
            <div>
              <p
                class="_nickname_bd68ac"
              >
                测试作品集
              </p>
              <p
                class="_meta_bd68ac"
              >
                <span>
                  Fixture University
                </span>
                <span
                  aria-hidden="true"
                  class="_metaSeparator_bd68ac"
                >
                  ·
                </span>
                <span>
                  测试摄影师
                </span>
              </p>
            </div>
          </div>
          <a
            aria-label="电子邮箱：Northstar_lzh@zju.edu.cn"
            class="_email_bd68ac"
            href="mailto:Northstar_lzh@zju.edu.cn"
          >
            <span
              class="_emailAction_bd68ac"
            >
              写一封邮件
            </span>
            <span
              class="_emailAddress_bd68ac"
            >
              Northstar_lzh@zju.edu.cn
            </span>
          </a>
        </div>
        <section
          aria-labelledby="contact-guide-title"
          class="_guide_bd68ac"
        >
          <div
            class="_guideHeader_bd68ac"
          >
            <h2
              id="contact-guide-title"
            >
              不知道从哪里写起？
            </h2>
            <p>
              下面四点任选几项即可，我能更快理解你的想法。
            </p>
          </div>
          <ol
            class="_guideList_bd68ac"
          >
            <li
              class="_guideItem_bd68ac"
            >
              <span
                aria-hidden="true"
                class="_guideNumber_bd68ac"
              >
                01
              </span>
              <div>
                <h3>
                  你想聊什么？
                </h3>
                <p>
                  一句话说明是影像、研究、项目，还是其他想法。
                </p>
              </div>
            </li>
            <li
              class="_guideItem_bd68ac"
            >
              <span
                aria-hidden="true"
                class="_guideNumber_bd68ac"
              >
                02
              </span>
              <div>
                <h3>
                  你是谁？
                </h3>
                <p>
                  留下你的称呼，以及个人、团队或机构背景。
                </p>
              </div>
            </li>
            <li
              class="_guideItem_bd68ac"
            >
              <span
                aria-hidden="true"
                class="_guideNumber_bd68ac"
              >
                03
              </span>
              <div>
                <h3>
                  你期待什么？
                </h3>
                <p>
                  交流、合作、委托，或只是一个简单的提问。
                </p>
              </div>
            </li>
            <li
              class="_guideItem_bd68ac"
            >
              <span
                aria-hidden="true"
                class="_guideNumber_bd68ac"
              >
                04
              </span>
              <div>
                <h3>
                  有哪些关键信息？
                </h3>
                <p>
                  可附上时间、地点、参考链接或相关材料。
                </p>
              </div>
            </li>
          </ol>
          <p
            class="_guideNote_bd68ac"
          >
            不需要准备完整提案；一个清楚的开场也足够。
          </p>
        </section>
      </div>
    </div>
  </section>
</div>
`;
